References: lp:1134892 MDEV-4624 - merged fix from LP wsrep-5.5-23